# lvgl_projects_port_a5

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h  main.c  sys_tick.c  sys_tick.h
